<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_main"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/mi_main"/>

    <item
        android:id="@+id/menu_item_catalog"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/mi_catalog"/>

    <item
        android:id="@+id/menu_item_list"
        android:icon="@drawable/ic_format_list_numbered_black_24dp"
        android:title="@string/mi_list_goods"/>

    <item
        android:id="@+id/menu_item_shops"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/mi_our_shops"/>

    <item
        android:id="@+id/menu_item_weather"
        android:icon="@drawable/ic_beach_access_black_24dp"
        android:title="@string/mi_weather"/>

    <item
        android:id="@+id/menu_item_about_us"
        android:icon="@drawable/ic_local_florist_black_24dp"
        android:title="@string/mi_about_shop"/>

</menu>