<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:stretchColumns="*">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/button_animation"
            android:text="@string/mi_main"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_catalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/button_animation"
            android:text="@string/mi_catalog"
            android:textColor="@color/colorWhite" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/button_animation"
            android:text="@string/mi_list_goods"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_shops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/button_animation"
            android:text="@string/mi_our_shops"
            android:textColor="@color/colorWhite" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/button_animation"
            android:text="@string/mi_weather"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_about_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/button_animation"
            android:text="@string/mi_about_shop"
            android:textColor="@color/colorWhite" />

    </TableRow>


</TableLayout>