<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp_8">

            <ImageView
                android:id="@+id/iv_item"
                android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_150"
                android:layout_margin="@dimen/dp_4"
                android:contentDescription="@string/product_picture"/>

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:padding="@dimen/dp_4"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_item_price"
                android:padding="@dimen/dp_4"
                android:textSize="@dimen/sp_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</FrameLayout>