<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightRose"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_about_weather_fmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="@dimen/dp_8"
        android:text="@string/weather_content" />


    <EditText
        android:id="@+id/etCityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_about_weather_fmt"
        android:hint="@string/enter_city"
        android:padding="@dimen/dp_8"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/btnProceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCityName"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/dp_8"
        android:paddingBottom="@dimen/dp_8"
        android:paddingLeft="@dimen/dp_50"
        android:paddingRight="@dimen/dp_50"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/button_animation"
        android:text="show"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_14"
        android:gravity="center" />

    <TextView
        android:id="@+id/tvCityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnProceed"
        android:visibility="invisible"
        android:textSize="2sp" />

    <TextView
        android:id="@+id/tvTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCityName"
        android:layout_marginLeft="@dimen/dp_110"
        android:textSize="@dimen/sp_28"
        android:layout_marginBottom="-50dp"
        tools:text="10" />

    <TextView
        android:id="@+id/tvMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCityName"
        android:layout_marginRight="@dimen/dp_110"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/sp_28"
        android:layout_marginBottom="-50dp"
        tools:text="Clear" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/background_picture"
        android:src="@drawable/weather_back2_00" />

</RelativeLayout>